Finish working on the parsing functions of the Job class to be able to report all the (types of) scaling factors. This class and its parsing functions are growing too much. This commit will be followed by some corrections and clean-up.

--- a/css/default.css
+++ b/css/default.css
@@ -744,21 +744,45 @@ input.save {
 }
 
 #scaling table { 
-  font-size: 105%;
-  padding-bottom: 1em;
+  margin-bottom: 2em;
+  font-size: 100%;
   width: 610px;
-  border: none;
-  left:0px;
 } 
 
 #scaling td {
-  text-align: left;
-  border: thin solid;
+  text-align: center;
 }
 
-#scaling td.text {
-  color: #3366FF;
-  padding-left: 6px;
+#scaling td.header { 
+  font-weight: bold;
+}
+
+#scaling td.param {
+  width: 175px;
+  font-weight: bold;
+  background-color: #eee;
+}
+
+#scaling td.value {
+  width: 100px;
+  font-weight: bold;
+  background-color: #eee;
+}
+
+#scaling td.channel {
+  width: 50px;
+  font-weight: bold;
+  background-color: #eee;
+}
+
+#scaling td.reason {
+  width: 100px;
+  font-weight: bold;
+  background-color: #eee;
+}
+
+#scaling td.cell { 
+  background-color: #CFD7F2;
 }
 
 #listusers {
